--- a/CSharp/ReferenceSemantics/ReferenceSemantics/ReferenceSemantics.csproj
+++ b/CSharp/ReferenceSemantics/ReferenceSemantics/ReferenceSemantics.csproj
@@ -9,4 +9,8 @@
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Memory" Version="4.4.0-preview1-25305-02" />
+  </ItemGroup>
+
 </Project>
